[gd_scene load_steps=8 format=3 uid="uid://djplopb2ynyxg"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_7t2o7"]
[ext_resource type="Texture2D" uid="uid://d2tq0j60j0gu2" path="res://assets/cards/background/food.png" id="2_gvuc5"]
[ext_resource type="Theme" uid="uid://dw88p5q24f3k5" path="res://themes/card.tres" id="2_rp6mj"]
[ext_resource type="Texture2D" uid="uid://daimxlq8g1weq" path="res://assets/cards/art/ramen.png" id="3_025ut"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_asnxy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxf85"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afobl"]
size = Vector2(66.5, 98)

[node name="Card" type="Button"]
offset_right = 84.0
offset_bottom = 120.0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_asnxy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxf85")
flat = true
script = ExtResource("1_7t2o7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 84.0
offset_bottom = 120.0
texture = ExtResource("2_gvuc5")

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0.105882, 0.105882, 0.105882, 1)
layout_mode = 0
offset_left = 12.0
offset_top = 39.0
offset_right = 68.0
offset_bottom = 97.0
texture = ExtResource("3_025ut")

[node name="Art" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 36.0
offset_right = 70.0
offset_bottom = 94.0
texture = ExtResource("3_025ut")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 24.0
theme = ExtResource("2_rp6mj")
text = "Blank Card"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ActivationArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2(42, 58)
shape = SubResource("RectangleShape2D_afobl")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="area_entered" from="ActivationArea" to="." method="_on_activation_area_area_entered"]
